// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`codegen element 1`] = `
"const { undefined:_undefined } = Vue
return function render(_ctx, _cache){return createElementVNode(div)}"
`;

exports[`codegen interpolation 1`] = `
"const { undefined:_undefined } = Vue
return function render(_ctx, _cache){return _undefined(_ctx.message)[object Object]}"
`;

exports[`codegen string 1`] = `
"
return function render(_ctx, _cache){return 'hi'}"
`;
